fix: scroll on mobile & tablets. fixed build issues by adding --no-optimize flag (temp fix, it seems parcel has some known issues)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -228,7 +228,7 @@ body {
       position: relative;
       height: 100%;
 
-      #tree-roots {
+      #roots {
         position: absolute;
         top: 0;
         left: -4rem;
